removed --cov from setup.cfg as it was conflicting with debuggig and added it to Makefile

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ initializer   = tortoise.contrib.test.env_initializer
 finalizer     = tortoise.contrib.test.finalizer
 
 [tool:pytest]
-addopts = -n auto --cov=tortoise --tb=native -q
+addopts = -n auto --tb=native -q
 
 [mypy]
 pretty = True
