--- a/tests/requirements-pypy.txt
+++ b/tests/requirements-pypy.txt
@@ -4,41 +4,41 @@
 #
 #    make up
 #
-aiomysql==0.0.20
-aiosqlite==0.11.0
+aiomysql==0.0.20          # via -r requirements-pypy.in
+aiosqlite==0.13.0         # via -r ../requirements.txt
 apipkg==1.5               # via execnet
-asynctest==0.13.0
+asynctest==0.13.0         # via -r requirements-pypy.in
 attrs==19.3.0             # via pytest
-certifi==2019.11.28       # via requests
-cffi==1.13.2              # via cryptography
+certifi==2020.4.5.1       # via requests
+cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via requests
-ciso8601==2.1.2
-coverage==5.0.2           # via coveralls, pytest-cov
-coveralls==1.10.0
-cryptography==2.8         # via pymysql
+ciso8601==2.1.3           # via -r ../requirements.txt
+coverage==5.1             # via coveralls, pytest-cov
+coveralls==2.0.0          # via -r requirements-pypy.in
+cryptography==2.9.2       # via pymysql
 docopt==0.6.2             # via coveralls
 execnet==1.7.1            # via pytest-xdist
-idna==2.8                 # via requests
-importlib-metadata==1.3.0  # via pluggy, pytest
-more-itertools==8.0.2     # via pytest, zipp
-packaging==20.0           # via pytest
+idna==2.9                 # via requests
+importlib-metadata==1.6.0  # via pluggy, pytest
+more-itertools==8.3.0     # via pytest
+packaging==20.4           # via pytest
 pluggy==0.13.1            # via pytest
 py==1.8.1                 # via pytest
-pycparser==2.19           # via cffi
+pycparser==2.20           # via cffi
 pymysql==0.9.2            # via aiomysql
-pyparsing==2.4.6          # via packaging
-pypika==0.35.18
-pytest-cov==2.8.1
+pyparsing==2.4.7          # via packaging
+pypika==0.37.6            # via -r ../requirements.txt
+pytest-cov==2.8.1         # via -r requirements-pypy.in
 pytest-forked==1.1.3      # via pytest-xdist
-pytest-xdist==1.31.0
-pytest==5.3.2
-pyyaml==5.3
-requests==2.22.0          # via coveralls
-six==1.13.0               # via cryptography, packaging, pytest-xdist
-typing-extensions==3.7.4.1
-urllib3==1.25.7           # via requests
-wcwidth==0.1.8            # via pytest
-zipp==0.6.0               # via importlib-metadata
+pytest-xdist==1.32.0      # via -r requirements-pypy.in
+pytest==5.4.2             # via -r requirements-pypy.in, pytest-cov, pytest-forked, pytest-xdist
+pyyaml==5.3.1             # via -r requirements-pypy.in
+requests==2.23.0          # via coveralls
+six==1.14.0               # via cryptography, packaging, pytest-xdist
+typing-extensions==3.7.4.2  # via -r ../requirements.txt
+urllib3==1.25.9           # via requests
+wcwidth==0.1.9            # via pytest
+zipp==3.1.0               # via importlib-metadata
 aiocontextvars==0.2.2 ; python_version < "3.7"
 contextvars==2.4 ; python_version < "3.7"
 immutables==0.9 ; python_version < "3.7"
