--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -5,124 +5,125 @@
 #    make up
 #
 -e .
-aiofiles==0.4.0           # via quart, sanic
-aiomysql==0.0.20
-aiosqlite==0.11.0
+aiofiles==0.5.0           # via quart, sanic
+aiomysql==0.0.20          # via -r requirements.in
+aiosqlite==0.13.0         # via -r ../docs/../requirements.txt, tortoise-orm
 alabaster==0.7.12         # via sphinx
 apipkg==1.5               # via execnet
-appdirs==1.4.3            # via black
-astroid==2.3.3            # via pylint
-asyncpg==0.20.0
-asynctest==0.13.0
+appdirs==1.4.4            # via black, virtualenv
+astroid==2.4.1            # via pylint
+asyncpg==0.20.1           # via -r requirements.in
+asynctest==0.13.0         # via -r requirements.in
 attrs==19.3.0             # via black, pytest
 babel==2.8.0              # via sphinx
-bandit==1.6.2
-black==19.10b0
-bleach==3.1.0             # via readme-renderer
+bandit==1.6.2             # via -r requirements.in
+black==19.10b0            # via -r requirements.in
+bleach==3.1.5             # via readme-renderer
 blinker==1.4              # via quart
-certifi==2019.11.28       # via httpx, requests
-cffi==1.13.2              # via cryptography
+certifi==2020.4.5.1       # via httpx, requests
+cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via httpx, requests
-ciso8601==2.1.2
-click==7.0                # via black, pip-tools, quart, uvicorn
-cloud-sptheme==1.10.0
+ciso8601==2.1.3           # via -r ../docs/../requirements.txt, tortoise-orm
+click==7.1.2              # via black, pip-tools, quart, uvicorn
+cloud-sptheme==1.10.1.post20200504175005  # via -r ../docs/requirements.in
 colorama==0.4.3           # via green
-coverage==5.0.2           # via coveralls, green, nose2, pytest-cov
-coveralls==1.10.0
-cryptography==2.8         # via pymysql
+coverage==5.1             # via coveralls, green, nose2, pytest-cov
+coveralls==2.0.0          # via -r requirements.in
+cryptography==2.9.2       # via pymysql
+distlib==0.3.0            # via virtualenv
 docopt==0.6.2             # via coveralls
-docutils==0.15.2
-entrypoints==0.3          # via flake8
+docutils==0.16            # via -r requirements.in, readme-renderer, sphinx
 execnet==1.7.1            # via pytest-xdist
-filelock==3.0.12          # via tox
-flake8-isort==2.8.0
-flake8==3.7.9             # via flake8-isort
-gitdb2==2.0.6             # via gitpython
-gitpython==3.0.5          # via bandit
-green==3.1.0
-h11==0.8.1                # via httpx, hypercorn, uvicorn, wsproto
-h2==3.1.1                 # via httpx, hypercorn
+filelock==3.0.12          # via tox, virtualenv
+flake8-isort==3.0.0       # via -r requirements.in
+flake8==3.8.1             # via flake8-isort
+gitdb==4.0.5              # via gitpython
+gitpython==3.1.2          # via bandit
+green==3.1.4              # via -r requirements.in
+h11==0.9.0                # via httpx, hypercorn, uvicorn, wsproto
+h2==3.2.0                 # via httpx, hypercorn
 hpack==3.0.0              # via h2
-hstspreload==2020.1.7     # via httpx
-httptools==0.0.13         # via sanic, uvicorn
-httpx==0.9.3              # via sanic
-hypercorn==0.9.0 ; python_version >= "3.7"
+hstspreload==2020.5.19    # via httpx
+httptools==0.1.1          # via sanic, uvicorn
+httpx==0.11.1             # via sanic
+hypercorn==0.9.5 ; python_version >= "3.7"  # via -r requirements.in, quart
 hyperframe==5.2.0         # via h2
-idna==2.8                 # via httpx, requests
+idna==2.9                 # via httpx, requests
 imagesize==1.2.0          # via sphinx
-importlib-metadata==1.3.0  # via pluggy, pytest, tox
+importlib-metadata==1.6.0  # via flake8, pluggy, pytest, tox, virtualenv
 isort[pyproject]==4.3.21  # via flake8-isort, pylint
 itsdangerous==1.1.0       # via quart
-jinja2==2.10.3            # via quart, sphinx
+jinja2==2.11.2            # via quart, sphinx
 lazy-object-proxy==1.4.3  # via astroid
-lxml==4.4.2               # via green
+lxml==4.5.1               # via green
 markupsafe==1.1.1         # via jinja2
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==8.0.2     # via pytest, zipp
-multidict==4.7.3          # via quart, sanic
+more-itertools==8.3.0     # via pytest
+multidict==4.7.6          # via sanic
 mypy-extensions==0.4.3    # via mypy
-mypy==0.761
-nose2==0.9.1
-packaging==20.0           # via pytest, sphinx, tox
-pathspec==0.7.0           # via black
-pbr==5.4.4                # via stevedore
-pip-tools==4.3.0
+mypy==0.770               # via -r requirements.in
+nose2==0.9.2              # via -r requirements.in
+packaging==20.4           # via bleach, pytest, sphinx, tox
+pathspec==0.8.0           # via black
+pbr==5.4.5                # via stevedore
+pip-tools==5.1.2          # via -r requirements.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
 priority==1.3.0           # via hypercorn
 py==1.8.1                 # via pytest, tox
-pycodestyle==2.5.0        # via flake8
-pycparser==2.19           # via cffi
-pyflakes==2.1.1           # via flake8
-pygments==2.5.2
-pylint==2.4.4
+pycodestyle==2.6.0        # via flake8
+pycparser==2.20           # via cffi
+pyflakes==2.2.0           # via flake8
+pygments==2.6.1           # via -r requirements.in, readme-renderer, sphinx
+pylint==2.5.2             # via -r requirements.in
 pymysql==0.9.2            # via aiomysql
-pyparsing==2.4.6          # via packaging
-pypika==0.35.18
-pytest-cov==2.8.1
+pyparsing==2.4.7          # via packaging
+pypika==0.37.6            # via -r ../docs/../requirements.txt, tortoise-orm
+pytest-cov==2.8.1         # via -r requirements.in
 pytest-forked==1.1.3      # via pytest-xdist
-pytest-xdist==1.31.0
-pytest==5.3.2
-python-rapidjson==0.9.1 ; implementation_name == "cpython"
-pytz==2019.3              # via babel
-pyyaml==5.3
-quart==0.10.0 ; python_version >= "3.7"
-readme-renderer==24.0     # via twine
-regex==2020.1.7           # via black
+pytest-xdist==1.32.0      # via -r requirements.in
+pytest==5.4.2             # via -r requirements.in, pytest-cov, pytest-forked, pytest-xdist
+python-rapidjson==0.9.1 ; implementation_name == "cpython"  # via -r requirements.in
+pytz==2020.1              # via babel
+pyyaml==5.3.1             # via -r requirements.in, bandit
+quart==0.11.5 ; python_version >= "3.7"  # via -r requirements.in
+readme-renderer==26.0     # via twine
+regex==2020.5.14          # via black
 requests-toolbelt==0.9.1  # via twine
-requests==2.22.0          # via coveralls, requests-toolbelt, sphinx, twine
-rfc3986==1.3.2            # via httpx
-sanic==19.12.2
-six==1.13.0               # via astroid, bandit, bleach, cryptography, nose2, packaging, pip-tools, pytest-xdist, readme-renderer, sphinx, stevedore, tox
-smmap2==2.0.5             # via gitdb2
+requests==2.23.0          # via coveralls, requests-toolbelt, sphinx, twine
+rfc3986==1.4.0            # via httpx
+sanic==20.3.0             # via -r requirements.in
+six==1.14.0               # via astroid, bandit, bleach, cryptography, nose2, packaging, pip-tools, pytest-xdist, readme-renderer, sphinx, stevedore, tox, virtualenv
+smmap==3.0.4              # via gitdb
 sniffio==1.1.0            # via httpx
 snowballstemmer==2.0.0    # via sphinx
-sortedcontainers==2.1.0   # via quart
-sphinx==1.8.5
-sphinxcontrib-websupport==1.1.2  # via sphinx
-starlette==0.13.0
-stevedore==1.31.0         # via bandit
-testfixtures==6.10.3      # via flake8-isort
-toml==0.10.0              # via black, hypercorn, isort, tox
-tox==3.14.3
-tqdm==4.41.1              # via twine
-twine==1.15.0
-typed-ast==1.4.0          # via astroid, black, mypy
-typing-extensions==3.7.4.1
-ujson==1.35               # via sanic
+sphinx==1.8.5             # via -r ../docs/requirements.in, cloud-sptheme
+sphinxcontrib-websupport==1.2.2  # via sphinx
+starlette==0.13.4         # via -r requirements.in
+stevedore==1.32.0         # via bandit
+testfixtures==6.14.1      # via flake8-isort
+toml==0.10.1              # via black, hypercorn, isort, pylint, quart, tox
+tox==3.15.0               # via -r requirements.in
+tqdm==4.46.0              # via twine
+twine==1.15.0             # via -r requirements.in
+typed-ast==1.4.1          # via astroid, black, mypy
+typing-extensions==3.7.4.2  # via -r ../docs/../requirements.txt, hypercorn, mypy, tortoise-orm
+ujson==2.0.3              # via sanic
 unidecode==1.1.1          # via green
-urllib3==1.25.7           # via requests
-uvicorn==0.11.1
-uvloop==0.14.0 ; sys_platform != "win32" and implementation_name == "cpython"
-virtualenv==16.7.9        # via tox
-wcwidth==0.1.8            # via pytest
+urllib3==1.25.9           # via httpx, requests
+uvicorn==0.11.5           # via -r requirements.in
+uvloop==0.14.0 ; sys_platform != "win32" and implementation_name == "cpython"  # via -r requirements.in, sanic, uvicorn
+virtualenv==20.0.20       # via tox
+wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
 websockets==8.1           # via sanic, uvicorn
-wrapt==1.11.2             # via astroid
-wsproto==0.15.0 ; python_version >= "3.7"
-zipp==0.6.0               # via importlib-metadata
+werkzeug==1.0.1           # via quart
+wrapt==1.12.1             # via astroid
+wsproto==0.15.0 ; python_version >= "3.7"  # via -r requirements.in, hypercorn
+zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
+# pip
 # setuptools
 aiocontextvars==0.2.2 ; python_version < "3.7"
 contextvars==2.4 ; python_version < "3.7"
