--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ addopts = -n auto --tb=native -q
 pretty = True
 ignore_missing_imports = True
 check_untyped_defs = True
-disallow_subclassing_any = True
+disallow_subclassing_any = False
 disallow_untyped_calls = True
 disallow_untyped_defs = False
 disallow_incomplete_defs = False
