--- a/tests/requirements-pypy.txt
+++ b/tests/requirements-pypy.txt
@@ -5,41 +5,36 @@
 #    make up
 #
 aiomysql==0.0.20          # via -r requirements-pypy.in
-aiosqlite==0.13.0         # via -r ../requirements.txt
+aiosqlite==0.15.0         # via -r ../requirements.txt
 apipkg==1.5               # via execnet
-asynctest==0.13.0         # via -r requirements-pypy.in
 attrs==19.3.0             # via pytest
-certifi==2020.4.5.1       # via requests
-cffi==1.14.0              # via cryptography
+certifi==2020.6.20        # via requests
+cffi==1.14.1              # via cryptography
 chardet==3.0.4            # via requests
 ciso8601==2.1.3           # via -r ../requirements.txt
-coverage==5.1             # via coveralls, pytest-cov
-coveralls==2.0.0          # via -r requirements-pypy.in
-cryptography==2.9.2       # via pymysql
+coverage==5.2.1           # via coveralls, pytest-cov
+coveralls==2.1.1          # via -r requirements-pypy.in
+cryptography==3.0         # via pymysql
 docopt==0.6.2             # via coveralls
 execnet==1.7.1            # via pytest-xdist
-idna==2.9                 # via requests
-importlib-metadata==1.6.0  # via pluggy, pytest
-more-itertools==8.3.0     # via pytest
+idna==2.10                # via requests
+iniconfig==1.0.1          # via pytest
+more-itertools==8.4.0     # via pytest
 packaging==20.4           # via pytest
 pluggy==0.13.1            # via pytest
-py==1.8.1                 # via pytest
+py==1.9.0                 # via pytest, pytest-forked
 pycparser==2.20           # via cffi
 pymysql==0.9.2            # via aiomysql
 pyparsing==2.4.7          # via packaging
-pypika==0.37.6            # via -r ../requirements.txt
-pytest-cov==2.8.1         # via -r requirements-pypy.in
-pytest-forked==1.1.3      # via pytest-xdist
-pytest-xdist==1.32.0      # via -r requirements-pypy.in
-pytest==5.4.2             # via -r requirements-pypy.in, pytest-cov, pytest-forked, pytest-xdist
+pypika==0.38.0            # via -r ../requirements.txt
+pytest-asyncio==0.14.0    # via -r requirements-pypy.in
+pytest-cov==2.10.0        # via -r requirements-pypy.in
+pytest-forked==1.3.0      # via pytest-xdist
+pytest-xdist==1.34.0      # via -r requirements-pypy.in
+pytest==6.0.1             # via -r requirements-pypy.in, pytest-asyncio, pytest-cov, pytest-forked, pytest-xdist
 pyyaml==5.3.1             # via -r requirements-pypy.in
-requests==2.23.0          # via coveralls
-six==1.14.0               # via cryptography, packaging, pytest-xdist
-typing-extensions==3.7.4.2  # via -r ../requirements.txt
-urllib3==1.25.9           # via requests
-wcwidth==0.1.9            # via pytest
-zipp==3.1.0               # via importlib-metadata
-aiocontextvars==0.2.2 ; python_version < "3.7"
-contextvars==2.4 ; python_version < "3.7"
-immutables==0.9 ; python_version < "3.7"
-dataclasses==0.6 ; python_version<"3.7"
+requests==2.24.0          # via coveralls
+six==1.15.0               # via cryptography, packaging, pytest-xdist
+toml==0.10.1              # via pytest
+typing-extensions==3.7.4.2  # via aiosqlite
+urllib3==1.25.10          # via requests
