--- a/tests/requirements-pypy.txt
+++ b/tests/requirements-pypy.txt
@@ -5,36 +5,35 @@
 #    make up
 #
 aiomysql==0.0.20          # via -r requirements-pypy.in
-aiosqlite==0.15.0         # via -r ../requirements.txt
+aiosqlite==0.16.0         # via -r ../requirements.txt
 apipkg==1.5               # via execnet
-attrs==19.3.0             # via pytest
+attrs==20.2.0             # via pytest
 certifi==2020.6.20        # via requests
-cffi==1.14.1              # via cryptography
+cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via requests
 ciso8601==2.1.3           # via -r ../requirements.txt
-coverage==5.2.1           # via coveralls, pytest-cov
-coveralls==2.1.1          # via -r requirements-pypy.in
-cryptography==3.0         # via pymysql
+coverage==5.3             # via coveralls, pytest-cov
+coveralls==2.1.2          # via -r requirements-pypy.in
+cryptography==3.2.1       # via pymysql
 docopt==0.6.2             # via coveralls
 execnet==1.7.1            # via pytest-xdist
 idna==2.10                # via requests
-iniconfig==1.0.1          # via pytest
-more-itertools==8.4.0     # via pytest
+iniconfig==1.1.1          # via pytest
 packaging==20.4           # via pytest
 pluggy==0.13.1            # via pytest
 py==1.9.0                 # via pytest, pytest-forked
 pycparser==2.20           # via cffi
 pymysql==0.9.2            # via aiomysql
 pyparsing==2.4.7          # via packaging
-pypika==0.38.0            # via -r ../requirements.txt
+pypika==0.43.0            # via -r ../requirements.txt
 pytest-asyncio==0.14.0    # via -r requirements-pypy.in
-pytest-cov==2.10.0        # via -r requirements-pypy.in
+pytest-cov==2.10.1        # via -r requirements-pypy.in
 pytest-forked==1.3.0      # via pytest-xdist
-pytest-xdist==1.34.0      # via -r requirements-pypy.in
-pytest==6.0.1             # via -r requirements-pypy.in, pytest-asyncio, pytest-cov, pytest-forked, pytest-xdist
+pytest-xdist==2.1.0       # via -r requirements-pypy.in
+pytest==6.1.2             # via -r requirements-pypy.in, pytest-asyncio, pytest-cov, pytest-forked, pytest-xdist
 pyyaml==5.3.1             # via -r requirements-pypy.in
 requests==2.24.0          # via coveralls
-six==1.15.0               # via cryptography, packaging, pytest-xdist
-toml==0.10.1              # via pytest
-typing-extensions==3.7.4.2  # via aiosqlite
-urllib3==1.25.10          # via requests
+six==1.15.0               # via cryptography, packaging
+toml==0.10.2              # via pytest
+typing-extensions==3.7.4.3  # via -r ../requirements.txt, aiosqlite
+urllib3==1.25.11          # via requests
