--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -5,117 +5,117 @@
 #    make up
 #
 -e .
-aiofiles==0.5.0           # via quart, sanic
+aiofiles==0.6.0           # via quart, sanic
 aiomysql==0.0.20          # via -r requirements.in
-aiosqlite==0.15.0         # via -r ../docs/../requirements.txt, tortoise-orm
+aiosqlite==0.16.0         # via -r ../docs/../requirements.txt, tortoise-orm
 alabaster==0.7.12         # via sphinx
 apipkg==1.5               # via execnet
 appdirs==1.4.4            # via black, virtualenv
 astroid==2.4.2            # via pylint
-asyncpg==0.20.1           # via -r requirements.in
-attrs==19.3.0             # via black, pytest
+asyncpg==0.21.0           # via -r requirements.in
+attrs==20.2.0             # via pytest
 babel==2.8.0              # via sphinx
 bandit==1.6.2             # via -r requirements.in
-black==19.10b0            # via -r requirements.in
-bleach==3.1.5             # via readme-renderer
+black==20.8b1             # via -r requirements.in
+bleach==3.2.1             # via readme-renderer
 blinker==1.4              # via quart
 certifi==2020.6.20        # via httpx, requests
-cffi==1.14.1              # via cryptography
-chardet==3.0.4            # via httpx, requests
+cffi==1.14.3              # via cryptography
+chardet==3.0.4            # via requests
 ciso8601==2.1.3           # via -r ../docs/../requirements.txt, tortoise-orm
 click==7.1.2              # via black, pip-tools, quart, uvicorn
 cloud-sptheme==1.10.1.post20200504175005  # via -r ../docs/requirements.in
-colorama==0.4.3           # via green
-coverage==5.2.1           # via coveralls, green, nose2, pytest-cov
-coveralls==2.1.1          # via -r requirements.in
-cryptography==3.0         # via pymysql
+colorama==0.4.4           # via green
+coverage==5.3             # via coveralls, green, nose2, pytest-cov
+coveralls==2.1.2          # via -r requirements.in
+cryptography==3.2.1       # via pymysql
 distlib==0.3.1            # via virtualenv
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements.in, readme-renderer, sphinx
 execnet==1.7.1            # via pytest-xdist
 filelock==3.0.12          # via tox, virtualenv
-flake8-isort==3.0.1       # via -r requirements.in
-flake8==3.8.3             # via flake8-isort
+flake8-isort==4.0.0       # via -r requirements.in
+flake8==3.8.4             # via flake8-isort
 gitdb==4.0.5              # via gitpython
-gitpython==3.1.7          # via bandit
-green==3.2.0              # via -r requirements.in
-h11==0.9.0                # via httpx, hypercorn, uvicorn, wsproto
-h2==3.2.0                 # via httpx, hypercorn
-hpack==3.0.0              # via h2
-hstspreload==2020.7.29    # via httpx
-httptools==0.1.1          # via sanic, uvicorn
-httpx==0.11.1             # via sanic
-hypercorn==0.10.2 ; python_version >= "3.7"  # via -r requirements.in, quart
-hyperframe==5.2.0         # via h2
-idna==2.10                # via httpx, requests
+gitpython==3.1.11         # via bandit
+green==3.2.4              # via -r requirements.in
+h11==0.9.0                # via httpcore, hypercorn, uvicorn, wsproto
+h2==4.0.0                 # via hypercorn
+hpack==4.0.0              # via h2
+httpcore==0.11.1          # via httpx
+httptools==0.1.1          # via sanic
+httpx==0.15.4             # via sanic
+hypercorn==0.11.1 ; python_version >= "3.7"  # via -r requirements.in, quart
+hyperframe==6.0.0         # via h2
+idna==2.10                # via requests, rfc3986
 imagesize==1.2.0          # via sphinx
-iniconfig==1.0.1          # via pytest
-isort[pyproject]==4.3.21  # via flake8-isort, pylint
+iniconfig==1.1.1          # via pytest
+isort==5.6.4              # via flake8-isort, pylint
 itsdangerous==1.1.0       # via quart
 jinja2==2.11.2            # via quart, sphinx
 lazy-object-proxy==1.4.3  # via astroid
-lxml==4.5.2               # via green
+lxml==4.6.1               # via green
 markupsafe==1.1.1         # via jinja2
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==8.4.0     # via pytest
-multidict==4.7.6          # via sanic
-mypy-extensions==0.4.3    # via mypy
-mypy==0.782               # via -r requirements.in
+multidict==5.0.0          # via sanic
+mypy-extensions==0.4.3    # via black, mypy
+mypy==0.790               # via -r requirements.in
 nose2==0.9.2              # via -r requirements.in
 packaging==20.4           # via bleach, pytest, sphinx, tox
 pathspec==0.8.0           # via black
-pbr==5.4.5                # via stevedore
+pbr==5.5.1                # via stevedore
 pip-tools==5.3.1          # via -r requirements.in
-pkginfo==1.5.0.1          # via twine
+pkginfo==1.6.1            # via twine
 pluggy==0.13.1            # via pytest, tox
 priority==1.3.0           # via hypercorn
 py==1.9.0                 # via pytest, pytest-forked, tox
 pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.2.0           # via flake8
-pygments==2.6.1           # via -r requirements.in, readme-renderer, sphinx
-pylint==2.5.3             # via -r requirements.in
+pygments==2.7.2           # via -r requirements.in, readme-renderer, sphinx
+pylint==2.6.0             # via -r requirements.in
 pymysql==0.9.2            # via aiomysql
 pyparsing==2.4.7          # via packaging
-pypika==0.38.0            # via -r ../docs/../requirements.txt, tortoise-orm
+pypika==0.43.0            # via -r ../docs/../requirements.txt, tortoise-orm
 pytest-asyncio==0.14.0    # via -r requirements.in
-pytest-cov==2.10.0        # via -r requirements.in
+pytest-cov==2.10.1        # via -r requirements.in
 pytest-forked==1.3.0      # via pytest-xdist
-pytest-xdist==1.34.0      # via -r requirements.in
-pytest==6.0.1             # via -r requirements.in, pytest-asyncio, pytest-cov, pytest-forked, pytest-xdist
-python-rapidjson==0.9.1 ; implementation_name == "cpython"  # via -r requirements.in
-pytz==2020.1              # via babel
+pytest-xdist==2.1.0       # via -r requirements.in
+pytest==6.1.2             # via -r requirements.in, pytest-asyncio, pytest-cov, pytest-forked, pytest-xdist
+python-rapidjson==0.9.3 ; implementation_name == "cpython"  # via -r requirements.in
+pytz==2020.4              # via babel
 pyyaml==5.3.1             # via -r requirements.in, bandit
-quart==0.13.0 ; python_version >= "3.7"  # via -r requirements.in
-readme-renderer==26.0     # via twine
-regex==2020.7.14          # via black
+quart==0.13.1 ; python_version >= "3.7"  # via -r requirements.in
+readme-renderer==28.0     # via twine
+regex==2020.10.28         # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.24.0          # via coveralls, requests-toolbelt, sphinx, twine
-rfc3986==1.4.0            # via httpx
-sanic==20.6.3             # via -r requirements.in
-six==1.15.0               # via astroid, bandit, bleach, cryptography, nose2, packaging, pip-tools, pytest-xdist, readme-renderer, sphinx, tox, virtualenv
+rfc3986[idna2008]==1.4.0  # via httpx
+sanic==20.9.1             # via -r requirements.in
+six==1.15.0               # via astroid, bandit, bleach, cryptography, nose2, packaging, pip-tools, readme-renderer, sphinx, tox, virtualenv
 smmap==3.0.4              # via gitdb
-sniffio==1.1.0            # via httpx
+sniffio==1.2.0            # via httpcore, httpx
 snowballstemmer==2.0.0    # via sphinx
 sphinx==1.8.5             # via -r ../docs/requirements.in, cloud-sptheme
-sphinxcontrib-websupport==1.2.3  # via sphinx
-starlette==0.13.6         # via -r requirements.in
-stevedore==3.2.0          # via bandit
-testfixtures==6.14.1      # via flake8-isort
-toml==0.10.1              # via black, hypercorn, isort, pylint, pytest, quart, tox
-tox==3.18.1               # via -r requirements.in
-tqdm==4.48.2              # via twine
+sphinxcontrib-serializinghtml==1.1.4  # via sphinxcontrib-websupport
+sphinxcontrib-websupport==1.2.4  # via sphinx
+starlette==0.13.8         # via -r requirements.in
+stevedore==3.2.2          # via bandit
+testfixtures==6.15.0      # via flake8-isort
+toml==0.10.2              # via black, hypercorn, pylint, pytest, quart, tox
+tox==3.20.1               # via -r requirements.in
+tqdm==4.51.0              # via twine
 twine==1.15.0             # via -r requirements.in
 typed-ast==1.4.1          # via black, mypy
-typing-extensions==3.7.4.2  # via aiosqlite, hypercorn, mypy
-ujson==3.1.0              # via sanic
+typing-extensions==3.7.4.3  # via -r ../docs/../requirements.txt, aiosqlite, black, mypy, tortoise-orm
+ujson==4.0.1              # via sanic
 unidecode==1.1.1          # via green
-urllib3==1.25.10          # via httpx, requests
-uvicorn==0.11.8           # via -r requirements.in
-uvloop==0.14.0 ; sys_platform != "win32" and implementation_name == "cpython"  # via -r requirements.in, sanic, uvicorn
-virtualenv==20.0.29       # via tox
+urllib3==1.25.11          # via requests
+uvicorn==0.12.2           # via -r requirements.in
+uvloop==0.14.0 ; sys_platform != "win32" and implementation_name == "cpython"  # via -r requirements.in, sanic
+virtualenv==20.1.0        # via tox
 webencodings==0.5.1       # via bleach
-websockets==8.1           # via sanic, uvicorn
+websockets==8.1           # via sanic
 werkzeug==1.0.1           # via quart
 wrapt==1.12.1             # via astroid
 wsproto==0.15.0 ; python_version >= "3.7"  # via -r requirements.in, hypercorn
